# batajelo

./: .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  AUTHORS  CMakeLists.txt  INSTALL.FEDORA  INSTALL.UBUNTU  LICENSE  README  monsters.yaml
cmake/Modules/: CodeCoverage.cmake  FindCATCH.cmake  FindLITESQL.cmake  FindSFGUI.cmake  FindSFML.cmake  Findmysql.cmake
data/: batajelo.mwb  batajelo.sql  network.dia  test.sql
data/maps/: test.tmx  test2.tmx  test3.tmx  test4.tmx
data/themes/: home.theme  login.theme  login_steps.theme  settings.theme
data/themes/popup/: error_popup.theme
doxygen/: Doxyfile.in  groups.hpp  main.hpp
src/: config.hpp.in  main.cpp
src/assets/: assets_manager.cpp  assets_manager.hpp
src/config/: Makefile  config.cpp  config.hpp
src/database/: Makefile  batajelo.sql  database.cpp  database.hpp  database.xml  db_object.cpp  db_object.hpp  friend_request.cpp  friend_request.hpp  request.cpp  request.hpp  team.cpp  team.hpp  user.cpp  user.hpp
src/fixmath/: fix16.c  fix16.cpp  fix16.h  fix16.hpp  fix16_exp.c  fix16_str.c  fix16_trig_sin_lut.h  main.c
src/game/: action.cpp  action.hpp  event.cpp  event.hpp  game.cpp  game.hpp  game_client.cpp  game_client.hpp  game_server.cpp  game_server.hpp  occupant.cpp  occupant.hpp  occupants_handler.cpp  occupants_handler.hpp  remote_game_client.cpp  remote_game_client.hpp  replay.cpp  replay.hpp  selection.cpp  selection.hpp  sound.cpp  sound.hpp  sounds_handler.cpp  sounds_handler.hpp  time.cpp  time.hpp  turn.cpp  turn.hpp  turn_handler.cpp  turn_handler.hpp
src/gui/: animation.cpp  animation.hpp  common.hpp  current_user.cpp  current_user.hpp  cursor.hpp  dash_cursor.cpp  dash_cursor.hpp  effect.hpp  home.cpp  home.hpp  login.cpp  login.hpp  login_steps.cpp  login_steps.hpp  network_to_ui.cpp  network_to_ui.hpp  oriented_sprite_sheets.hpp  page.cpp  page.hpp  particle.hpp  particle_effect.cpp  particle_effect.hpp  positionnable.hpp  settings.cpp  settings.hpp  sprite_sheet.hpp  ui.cpp  ui.hpp  utils.cpp  utils.hpp
src/gui/camera/: camera.cpp  camera.hpp  fog.cpp  fog.hpp  layer.cpp  layer.hpp  map.cpp  map.hpp  mobility_sprites.cpp  mobility_sprites.hpp  mouse_selection.cpp  mouse_selection.hpp  tile.cpp  tile.hpp  tileset.cpp  tileset.hpp
src/gui/effects/: explosion.cpp  explosion.hpp  smoke_trail.cpp  smoke_trail.hpp
src/gui/hud/: abilities_panel.cpp  abilities_panel.hpp  action_panel.cpp  action_panel.hpp  action_panel_button.cpp  action_panel_button.hpp  action_panel_page.cpp  action_panel_page.hpp  action_panel_table.cpp  action_panel_table.hpp  debug_hud.cpp  debug_hud.hpp  gui_ability.hpp  hud.cpp  hud.hpp  hud_message.cpp  hud_message.hpp  info_hud.cpp  info_hud.hpp  minimap.cpp  minimap.hpp  selection_panel.cpp  selection_panel.hpp
src/gui/menu/: button.cpp  button.hpp  first_page.cpp  first_page.hpp  menu.cpp  menu.hpp  menu_page.cpp  menu_page.hpp  second_page.cpp  second_page.hpp  text_input.cpp  text_input.hpp  widget.cpp  widget.hpp
src/gui/page/: home.cpp  home.hpp  login.cpp  login.hpp  login_steps.cpp  login_steps.hpp  (+3 more)
src/logging/: logging.cpp  logging.hpp
src/main/: batajelo_client.cpp  batajelo_game_server.cpp  batajelo_master_server.cpp  batajelo_menu_client.cpp  batajelo_server.cpp  batajelo_slave.cpp  minimap_generator.cpp
src/master_server/: master_server.cpp  master_server.hpp  master_to_client_server.cpp  master_to_client_server.hpp  master_to_slave_server.cpp  master_to_slave_server.hpp  master_to_web_server.cpp  master_to_web_server.hpp  remote_client.cpp  remote_client.hpp  remote_slave_client.cpp  remote_slave_client.hpp
src/menu_client/: menu_client.cpp  menu_client.hpp
src/mod/: client_mod.cpp  client_mod.hpp  mod.cpp  mod.hpp
src/mpreal/: mpreal.h
src/network/: CMakeLists.txt  Makefile  base_ioservice.hpp  base_socket.hpp  client.cpp  client.hpp  client_base.cpp  client_base.hpp  command.cpp  command.hpp  command_handler.cpp  command_handler.hpp  game_client.cpp  game_client.hpp  game_server.cpp  game_server.hpp  interface_client.cpp  interface_client.hpp  interface_remote_client.cpp  interface_remote_client.hpp  ioservice.cpp  ioservice.hpp  ipc_endpoint.cpp  ipc_endpoint.hpp  main.cpp  message.cpp  message.hpp  message_handler.cpp  message_handler.hpp  ping_handler.cpp  ping_handler.hpp  remote_client.cpp  remote_client.hpp  remote_client_base.cpp  remote_client_base.hpp  remote_game_client.cpp  remote_game_client.hpp  repetitive_task.cpp  repetitive_task.hpp  server.cpp  (+13 more)
src/network_objects/: player.cpp  player.hpp  team.cpp  team.hpp  team_serial.cpp  team_serial.hpp
src/pathfinding/: astar.cpp  astar.hpp
src/proto/: game.proto  master.proto  orders.proto  requests.proto  slave.proto
src/serialization/: exception.hpp  serializable.hpp
src/slave/: child_game.cpp  child_game.hpp  children_handler.cpp  children_handler.hpp  slave.cpp  slave.hpp  slave_client.cpp  slave_client.hpp
src/tests/: database_main.cpp
src/translation/: translation.hpp
src/utils/: base64.cpp  math.hpp  maths.cpp  string.cpp  string.hpp  time.cpp  time.hpp  zlib.cpp  zlib.hpp
src/world/: abilities.cpp  abilities.hpp  ability_work.cpp  ability_work.hpp  acquisition.cpp  acquisition.hpp  action.hpp  attack_work.cpp  attack_work.hpp  blink_work.cpp  blink_work.hpp  building.cpp  building.hpp  client_world.cpp  client_world.hpp  components.hpp  cooldown.hpp  direction.hpp  entity.cpp  entity.hpp  entity_factory.cpp  entity_factory.hpp  health.cpp  health.hpp  layer.cpp  layer.hpp  location.cpp  location.hpp  mana.cpp  mana.hpp  manapool.cpp  manapool.hpp  map.cpp  map.hpp  mobility.cpp  mobility.hpp  occupant.cpp  occupant.hpp  path.cpp  path.hpp  (+34 more)
tests/: Makefile  approx.cpp  approx.hpp  config.cpp  config_test.cpp  database.cpp  database_main.cpp  database_test.cpp  enable_logging.hpp  entities.cpp  fixmath.cpp  fixmath_test.cpp  game_main.cpp  game_server_main.cpp  game_test.cpp  gui_main.cpp  io_tester.cpp  logging.cpp  mpreal_test.cpp  network.cpp  network_test.cpp  serialization_test.cpp  server_main.cpp  test.cpp  utils_test.cpp  world_test.cpp
(+92 files in other folders)
